--- a/index.html
+++ b/index.html
@@ -1,6 +1,81 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>BLANK</h1>
+<html lang="en-us">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="author" content="Julian hasse">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Julian Hasse | Portfolio</title>
+
+  <!-- Bootstrap CDN -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+
+</head>
+
+<body class="bgimage">
+  
+<!-- nav bar -->
+  <nav class="navbar navbar-default">
+    <!-- we put a container to extend to the full page -->
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="index.html"><span class="logoNav">Julian Hasse<span></a>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="index.html">About</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container" id="upperRow">
+    <div class="row">
+      <div class="col-md-5" id="main">
+        <div class="page-header">
+          <h1 class="aboutMe">About Me</h1>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <img src="images/julian_cartoon.jpg" alt="Julian Hasse" class="img-thumbnail">
+          </div>
+          <div class="col-md-9">
+            <p>
+                Interaction + Information Designer. A global nomad in the crossover between form and function. I enjoy building guitars from scratch. 
+                Whenever I have a problem, I sing. Then I realize my voice is worse than my problem. Also, I get a lot of satisfaction out of home improvement projects. 
+                Rumors have circulated that my social security number is h1dden in ev3ry single p4ge I have ever p0sted.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3 col-md-offset-2" >
+        <div class="panel panel-default">
+          <div class="panel-body">
+            Connect with me
+          </div>
+          <hr width="85%">
+          <div class="panel-body">
+            <div class="iconLeft"><a href="#"><img src="http://placehold.it/70x70"></a></div>
+            <div class="iconCenter"><a href="#"><img src="http://placehold.it/70x70"></a></div>
+            <div class="iconRight"><a href="#"><img src="http://placehold.it/70x70"></a></div>
+          </div> 
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+  <!-- jQuery CDN -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+  <!-- Bootstrap JavaScript CDN -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
+
 </html>
