New layout - Initial commit

--- a/index.html
+++ b/index.html
@@ -1,81 +1,96 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="author" content="Julian hasse">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Julian Hasse | Portfolio</title>
+  <head>
 
-  <!-- Bootstrap CDN -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-</head>
+    <title>Julian Hasse | Portfolio</title>
 
-<body class="bgimage">
-  
-<!-- nav bar -->
-  <nav class="navbar navbar-default">
-    <!-- we put a container to extend to the full page -->
-    <div class="container">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="index.html"><span class="logoNav">Julian Hasse<span></a>
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/style.css" rel="stylesheet">
+
+  </head>
+
+  <body class="bgimage">
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#"><span class="logoNav">Julian Hasse</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">About
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="connect.html">Connect</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container" id="upperRow">
+      <div class="row">
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Project One</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Project Two</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            </div>
+          </div>
+        </div>
+
+
     </div>
-  </nav>
-
-  <div class="container" id="upperRow">
-    <div class="row">
-      <div class="col-md-5" id="main">
-        <div class="page-header">
-          <h1 class="aboutMe">About Me</h1>
-        </div>
-        <div class="row">
-          <div class="col-md-3">
-            <img src="images/julian_cartoon.jpg" alt="Julian Hasse" class="img-thumbnail">
-          </div>
-          <div class="col-md-9">
-            <p>
-                Interaction + Information Designer. A global nomad in the crossover between form and function. I enjoy building guitars from scratch. 
-                Whenever I have a problem, I sing. Then I realize my voice is worse than my problem. Also, I get a lot of satisfaction out of home improvement projects. 
-                Rumors have circulated that my social security number is h1dden in ev3ry single p4ge I have ever p0sted.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-3 col-md-offset-2" >
-        <div class="panel panel-default">
-          <div class="panel-body">
-            Connect with me
-          </div>
-          <hr width="85%">
-          <div class="panel-body">
-            <div class="iconLeft"><a href="#"><img src="http://placehold.it/70x70"></a></div>
-            <div class="iconCenter"><a href="#"><img src="http://placehold.it/70x70"></a></div>
-            <div class="iconRight"><a href="#"><img src="http://placehold.it/70x70"></a></div>
-          </div> 
-        </div>
-      </div>
-
-    </div>
+    <!-- /.row -->
   </div>
+    <!-- /.container -->
 
+    
+    <!-- Footer -->
+    <footer class="py-5 bg-dark" id="footer">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Julian Hasse 2017</p>
+      </div>
+      <!-- /.container -->
+    </footer>
 
-  <!-- jQuery CDN -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/popper/popper.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-  <!-- Bootstrap JavaScript CDN -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</body>
+  </body>
 
 </html>
