Left Panel completed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
   <head>
-
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Julian Hasse">
     <title>Julian Hasse | Portfolio</title>
 
     <!-- Bootstrap core CSS -->
@@ -58,7 +55,8 @@
                   <div class="row">
                         <div class="col-md-11" id="content">
                           <img class="aboutImage" src="images/julian_cartoon.jpg" width="140">
-                          Interaction + Information Designer. A global nomad in the crossover between form and function. I enjoy building guitars from scratch. Whenever I have a problem, I sing. Then I realize my voice is worse than my problem. Also, I get a lot of satisfaction out of home improvement projects. Rumors have circulated that my social security number is h1dden in ev3ry single p4ge I have ever p0sted.                        </div>
+                          <span class="bioText">Interaction + Information Designer. A global nomad in the crossover between form and function. I enjoy building guitars from scratch. Whenever I have a problem, I sing. Then I realize my voice is worse than my problem. Also, I get a lot of satisfaction out of home improvement projects. Rumors have circulated that my social security number is h1dden in ev3ry single p4ge I have ever p0sted.</span>
+                        </div>
                      
                   </div>
               </div>
@@ -76,6 +74,8 @@
             <div class="panel panel-default">
               <div class="panel-body">
                   <div class="connectMe">Connect with me</div>
+                  <hr width="90%">
+                  
               </div>
             </div>  
         </div>
