Right panel completed

--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
     <!-- Page Content -->
     <div class="container" id="upperRow">
       <div class="row">
-        
         <div class="col-md-6" id="leftPanel">
             <div class="panel panel-default">
               <div class="panel-body">
                   <div class="aboutMe">About me</div>
-                  <hr width="90%">
-                  <div class="row">
-                        <div class="col-md-11" id="content">
+                      <hr width="90%">
+                      <div class="row">
+                      <div class="col-md-11" id="content">
                           <img class="aboutImage" src="images/julian_cartoon.jpg" width="140">
                           <span class="bioText">Interaction + Information Designer. A global nomad in the crossover between form and function. I enjoy building guitars from scratch. Whenever I have a problem, I sing. Then I realize my voice is worse than my problem. Also, I get a lot of satisfaction out of home improvement projects. Rumors have circulated that my social security number is h1dden in ev3ry single p4ge I have ever p0sted.</span>
                         </div>
@@ -62,20 +61,27 @@
               </div>
             </div>  
         </div>
-
+    <!-- Separator -->
         <div class="col-md-3 " id="centerPanel">
             <div class="panel panel-default">
               <div class="panel-body">
               </div>
             </div>  
         </div>
+    <!-- End Separator -->
 
         <div class="col-md-3 " id="leftPanel">
             <div class="panel panel-default">
               <div class="panel-body">
                   <div class="connectMe">Connect with me</div>
-                  <hr width="90%">
-                  
+                    <hr width="90%">
+                    <div class="row">
+                       <div class="col-md-12">
+                          <a href="https://github.com/julianhasse" target="_blank"><img class="iconLeft" src="images/github_icon_48x48.png" width="70"></a>
+                          <a href="https://www.linkedin.com/in/julian-hasse-410089136" target="_blank"><img class="iconCenter" src="images/linkedin_icon_48x48.png" width="70"></a>
+                          <a href="https://stackoverflow.com/users/5367877/julian-hasse" target="_blank"><img class="iconRight" src="images/stackoverflow_icon_48x48.png" width="70"></a>
+                    </div>
+                  </div>
               </div>
             </div>  
         </div>
