--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>  
         </div>
     <!-- Separator -->
-        <div class="col-md-3 " id="centerPanel">
+        <div class="col-md-3" id="centerPanel">
             <div class="panel panel-default">
               <div class="panel-body">
               </div>
@@ -77,9 +77,9 @@
                     <hr width="90%">
                     <div class="row">
                        <div class="col-md-12">
-                          <a href="https://github.com/julianhasse" target="_blank"><img class="iconLeft" src="images/github_icon_48x48.png" width="70"></a>
-                          <a href="https://www.linkedin.com/in/julian-hasse-410089136" target="_blank"><img class="iconCenter" src="images/linkedin_icon_48x48.png" width="70"></a>
-                          <a href="https://stackoverflow.com/users/5367877/julian-hasse" target="_blank"><img class="iconRight" src="images/stackoverflow_icon_48x48.png" width="70"></a>
+                          <a href="https://github.com/julianhasse" target="_blank"><img class="iconLeft img-responsive" src="images/github_icon_48x48.png" width="68"></a>
+                          <a href="https://www.linkedin.com/in/julian-hasse-410089136" target="_blank"><img class="iconCenter" src="images/linkedin_icon_48x48.png" width="68"></a>
+                          <a href="https://stackoverflow.com/users/5367877/julian-hasse" target="_blank"><img class="iconRight" src="images/stackoverflow_icon_48x48.png" width="68"></a>
                     </div>
                   </div>
               </div>
