Added img-thumbnail classes to image and icons

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="connect.html">Connect</a>
+              <a class="nav-link" href="connect.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -53,7 +53,7 @@
                       <hr width="90%">
                       <div class="row">
                       <div class="col-md-11" id="content">
-                          <img class="aboutImage" src="images/julian_cartoon.jpg" width="140">
+                          <img class="aboutImage img-thumbnail" src="images/julian_cartoon.jpg" width="140">
                           <span class="bioText">Interaction + Information Designer. A global nomad in the crossover between form and function. I enjoy building guitars from scratch. Whenever I have a problem, I sing. Then I realize my voice is worse than my problem. Also, I get a lot of satisfaction out of home improvement projects. Rumors have circulated that my social security number is h1dden in ev3ry single p4ge I have ever p0sted.</span>
                         </div>
                      
@@ -77,9 +77,9 @@
                     <hr width="90%">
                     <div class="row">
                        <div class="col-md-12">
-                          <a href="https://github.com/julianhasse" target="_blank"><img class="iconLeft img-responsive" src="images/github_icon_48x48.png" width="68"></a>
-                          <a href="https://www.linkedin.com/in/julian-hasse-410089136" target="_blank"><img class="iconCenter" src="images/linkedin_icon_48x48.png" width="68"></a>
-                          <a href="https://stackoverflow.com/users/5367877/julian-hasse" target="_blank"><img class="iconRight" src="images/stackoverflow_icon_48x48.png" width="68"></a>
+                          <a href="https://github.com/julianhasse" target="_blank"><img class="iconLeft pull-left img-thumbnail" src="images/github_icon_48x48.png" width="68"></a>
+                          <a href="https://www.linkedin.com/in/julian-hasse-410089136" target="_blank"><img class="iconCenter pull-left img-thumbnail" src="images/linkedin_icon_48x48.png" width="68"></a>
+                          <a href="https://stackoverflow.com/users/5367877/julian-hasse" target="_blank"><img class="iconRight pull-left img-thumbnail" src="images/stackoverflow_icon_48x48.png" width="68"></a>
                     </div>
                   </div>
               </div>
