--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body class="bgimage">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#"><span class="logoNav">Julian Hasse</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,7 +46,7 @@
     <!-- Page Content -->
     <div class="container" id="upperRow">
       <div class="row">
-        <div class="col-md-6" id="leftPanel">
+        <div class="col-md-7" id="leftPanel">
             <div class="panel panel-default">
               <div class="panel-body">
                   <div class="aboutMe">About me</div>
@@ -62,7 +62,7 @@
             </div>  
         </div>
     <!-- Separator -->
-        <div class="col-md-3" id="centerPanel">
+        <div class="col-md-1" id="centerPanel">
             <div class="panel panel-default">
               <div class="panel-body">
               </div>
@@ -70,16 +70,16 @@
         </div>
     <!-- End Separator -->
 
-        <div class="col-md-3 " id="leftPanel">
+        <div class="col-md-4" id="leftPanel">
             <div class="panel panel-default">
               <div class="panel-body">
                   <div class="connectMe">Connect with me</div>
-                    <hr width="90%">
+                    <hr width="85%">
                     <div class="row">
-                       <div class="col-md-12">
-                          <a href="https://github.com/julianhasse" target="_blank"><img class="iconLeft pull-left img-thumbnail" src="images/github_icon_48x48.png" width="68"></a>
-                          <a href="https://www.linkedin.com/in/julian-hasse-410089136" target="_blank"><img class="iconCenter pull-left img-thumbnail" src="images/linkedin_icon_48x48.png" width="68"></a>
-                          <a href="https://stackoverflow.com/users/5367877/julian-hasse" target="_blank"><img class="iconRight pull-left img-thumbnail" src="images/stackoverflow_icon_48x48.png" width="68"></a>
+                       <div class="col-md-12" id="asideRight">
+                          <a href="https://github.com/julianhasse" target="_blank"><img class="iconLeft pull-left img-thumbnail" src="images/github_icon_48x48.png" width="55"></a>
+                          <a href="https://www.linkedin.com/in/julian-hasse-410089136" target="_blank"><img class="iconCenter pull-left img-thumbnail" src="images/linkedin_icon_48x48.png" width="55"></a>
+                          <a href="https://stackoverflow.com/users/5367877/julian-hasse" target="_blank"><img class="iconRight pull-left img-thumbnail" src="images/stackoverflow_icon_48x48.png" width="55"></a>
                     </div>
                   </div>
               </div>
