--- a/contact.html
+++ b/contact.html
@@ -26,16 +26,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">About
-                <span class="sr-only">(current)</span>
-              </a>
+            <li class="nav-item ">
+              <a class="nav-link" href="index.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="portfolio.html">Portfolio</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="contact.html">Contact
+                <span class="sr-only">(current)</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -49,7 +49,7 @@
         <div class="col-md-7" id="leftPanel">
             <div class="panel panel-default">
               <div class="panel-body">
-                  <div class="aboutMe">About me</div>
+                  <div class="aboutMe">Contact</div>
                       <hr width="90%">
                       <div class="row">
                       <div class="col-md-11" id="content">
