--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">About</a>
+            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">About
+              <a class="nav-link" href="portfolio.html">Portfolio
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
+              
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -49,7 +50,7 @@
         <div class="col-md-7" id="leftPanel">
             <div class="panel panel-default">
               <div class="panel-body">
-                  <div class="aboutMe">About me</div>
+                  <div class="aboutMe">Portfolio</div>
                       <hr width="90%">
                       <div class="row">
                       <div class="col-md-11" id="content">
