--- a/portfolio.html
+++ b/portfolio.html
@@ -53,17 +53,58 @@
                   <div class="aboutMe">Portfolio</div>
                       <hr width="90%">
                       <div class="row">
-                      <div class="col-md-11" id="content">
-                          <img class="aboutImage img-thumbnail" src="images/julian_cartoon.jpg" width="140">
-                          <span class="bioText">Interaction + Information Designer. A global nomad in the crossover between form and function. I enjoy building guitars from scratch. Whenever I have a problem, I sing. Then I realize my voice is worse than my problem. Also, I get a lot of satisfaction out of home improvement projects. Rumors have circulated that my social security number is h1dden in ev3ry single p4ge I have ever p0sted.</span>
-                        </div>
-                     
+                        <div class="col-md-12" id="content">
+                          <!-- Image left -->
+                            <div class="mainPortfolio">
+                                <div class="imgLeft">
+                                     <img class="img-thumbnail" src="images/placeholder.jpg" alt="portfolio 1" width="205">
+                                        <div class="imgTitle">
+                                             Websites
+                                        </div>
+                                </div>
+                            </div>
+                            <!-- End Image left -->
+
+                            <!-- Image Right -->
+                            <div class="mainPortfolio">
+                                <div class="imgLeft">
+                                     <img class="img-thumbnail" src="images/placeholder.jpg" alt="portfolio 1" width="205">
+                                        <div class="imgTitle">
+                                             Software
+                                        </div>
+                                </div>
+                            </div>
+                            <!-- End Image Right -->
+
+                            <!-- Image left -->
+                            <div class="mainPortfolio">
+                                <div class="imgLeft">
+                                     <img class="img-thumbnail" src="images/placeholder.jpg" alt="portfolio 1" width="205">
+                                        <div class="imgTitle">
+                                             Apps
+                                        </div>
+                                </div>
+                            </div>
+                            <!-- End Image left -->
+
+                            <!-- Image Right -->
+                            <div class="mainPortfolio">
+                                <div class="imgLeft">
+                                     <img class="img-thumbnail" src="images/placeholder.jpg" alt="portfolio 1" width="205">
+                                        <div class="imgTitle">
+                                             Back End
+                                        </div>
+                                </div>
+                            </div>
+                            <!-- End Image Right -->
+                            
+                      </div>
                   </div>
               </div>
             </div>  
         </div>
     <!-- Separator -->
-        <div class="col-md-1" id="centerPanel">
+        <div class="col-md-1 hidden-xs" id="centerPanel">
             <div class="panel panel-default">
               <div class="panel-body">
               </div>
