--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>  
         </div>
     <!-- Separator -->
-        <div class="col-md-1" id="centerPanel">
+        <div class="col-md-1 hidden-xs" id="centerPanel">
             <div class="panel panel-default">
               <div class="panel-body">
               </div>
