--- a/contact.html
+++ b/contact.html
@@ -52,11 +52,24 @@
                   <div class="aboutMe">Contact</div>
                       <hr width="90%">
                       <div class="row">
-                      <div class="col-md-11" id="content">
-                          <img class="aboutImage img-thumbnail" src="images/julian_cartoon.jpg" width="140">
-                          <span class="bioText">Interaction + Information Designer. A global nomad in the crossover between form and function. I enjoy building guitars from scratch. Whenever I have a problem, I sing. Then I realize my voice is worse than my problem. Also, I get a lot of satisfaction out of home improvement projects. Rumors have circulated that my social security number is h1dden in ev3ry single p4ge I have ever p0sted.</span>
-                        </div>
-                     
+                          <div class="col-md-11" id="content">
+
+                          <!-- Form -->
+                          <div class="contactForm">
+                             <form action="#.php">
+                                Name<br>
+                                <input type="text" name="firstname" value="John Smith"><br />
+                                Email<br />
+                                <input type="text" name="lastname" value="example@gmail.com"><br />
+                                Message<br />
+                                <textarea rows="4" cols="50">
+                                </textarea> <br /><br />
+                                <input type="submit" value="Submit">
+                             </form>
+                          </div>
+                          <!-- End Form -->
+
+                      </div>  
                   </div>
               </div>
             </div>  
